--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -187,7 +187,7 @@ footer p {
     padding: 20px;
     background: var(--color-bg-body);
     @media (min-width: 900px) { grid-template-columns: repeat(3, 1fr); }
-    @media (max-width: 900px) { grid-template-rows: repeat(3, 1fr); }
+    @media (max-width: 899px) { grid-template-rows: repeat(3, 1fr); }
     & > section {
         padding: 15px;
         background: var(--color-bg-header);
@@ -246,8 +246,8 @@ input:not([type="submit"]) {
     }
 }
 input[type="submit"] {
-    flex: 1;
-    padding: 10px;
+    padding: 8px 16px;
+    margin: 0px;
     border: none;
     border-radius: var(--border-radius);
     font-weight: bold;
@@ -257,6 +257,7 @@ input[type="submit"] {
     color: var(--color-bg-header);
     &:hover {
         background: var(--color-primary-hover);
-        transform: scale(1.03);
+        transform: scale(1.05);
     }
 }
+main form input[type="submit"] { margin: 10px 5px; }
