style: mejorar formularios interfaz segun indicaciones

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -225,7 +225,7 @@ footer p {
         font-size: 1.15rem;
     }
 }
-.obligatorio {
+input[obligatorio] {
     background: #323500 !important;
     &:focus {
         border-color: #b0bd00 !important;
