--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -231,6 +231,11 @@ input[obligatorio] {
         border-color: #b0bd00 !important;
     }
 }
+input[readonly],input[disabled] {
+    color: darkgrey !important;
+    background: #26272d !important;
+    border-color: #182c3b !important;
+}
 
 
 input:not([type="submit"]) {
@@ -261,3 +266,51 @@ input[type="submit"] {
     }
 }
 main form input[type="submit"] { margin: 10px 5px; }
+
+form#form_cuenta > input[type="submit"]#boton_cuenta {
+    padding: 0; margin: 0;
+    border-radius: 100%;
+    height: 2rem; aspect-ratio: 1;
+    font-size: 1rem; line-height: 1rem;
+    color: white;
+    transition: transform 0.2s;
+    cursor: pointer;
+    box-sizing: content-box;
+    text-shadow:
+        -1px -1px 0 black,
+        0    -1px 0 black,
+        1px  -1px 0 black,
+        -1px  0   0 black,
+        1px   0   0 black,
+        -1px  1px 0 black,
+        0     1px 0 black,
+        1px   1px 0 black;
+
+}
+form#form_cuenta > input[type="submit"]#boton_cuenta:hover {
+    transform: scale(1.15);
+}
+
+#manDep {
+    background: var(--color-bg-footer);
+    padding: 22px;
+    border-radius: 8px;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 40px;
+}
+#manDep > form {
+    display: flex;
+    justify-content: center;
+}
+#manDep > form input[type="submit"] {
+    margin: 0; margin-left: 5px;
+    height: 100%;
+}
+#manDep > table {
+    border-collapse: collapse;
+    font-size: 1.1rem;
+
+    & * {border: 3px solid var(--color-primary);}
+    & th,td { padding: 4px 10px; min-width: 35px;}
+}
