--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -340,3 +340,59 @@ form#form_cuenta > input[type="submit"]#boton_cuenta:hover {
         transform: scale(1.4);
     }
 }
+
+
+section.hero-text.vaDep {
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 20px;
+    background: var(--color-bg-footer);
+    border-radius: 1rem;
+}
+section.hero-text.vaDep > div {
+    min-width: 100%;
+    width: min-content;
+    & > img{
+        border-radius: .5rem;
+        width: 100%; max-width: 200px;
+        aspect-ratio: 1;
+        margin-bottom: 15px;
+    }
+    & > form { width: 100%; }
+    & > form > input { display: none; }
+    & > form > label {
+        display: block; width: max-content;
+        padding: 10px;
+        margin: 5px auto;
+        background: var(--color-primary);
+        border-radius: var(--border-radius);
+        color: var(--color-bg-header);
+        cursor: pointer;
+    }
+}
+section.hero-text.vaDep > form {
+    height: 100%; width: 100%;
+    background: #171d25;
+    border-radius: .5rem;
+    min-width: 50px;
+    padding: 20px;
+
+    --tamaño: 350px;
+    & > * {display: block; max-width: var(--tamaño);}
+    & > input {margin-bottom: 12px; width: var(--tamaño);}
+}
+section.hero-text.vaDep > form > label {
+    width: 100%;
+    text-align: left;
+    padding: 3px 3px;
+}
+section.hero-text.vaDep > form > input[type="submit"] {
+    margin: 0 auto;
+    margin-top: 29px;
+}
+section.hero-text.vaDep > form > div > input[type="checkbox"] {
+    margin: 0;
+    margin-right: auto;
+}
